--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "vanilla-tilt": "^1.8.1"
   }
 }
